--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="index.js"></script>
 </head>
 <body>
-
+    <style>
+        body {
+            background-color: blanchedalmond;
+        }
+    </style>
 </body>
 </html>
