--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
             background-color: blanchedalmond;
         }
     </style>
+    <button onclick="document.getElementById('index.js').innerHTML= getinteger(0,10)">Click Me</button>
 </body>
 </html> 
